--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,17 @@
+[build]
+  publish = "/"
+  command = "# no command"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [[headers]]
   for = "/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept"
+    Access-Control-Max-Age = "2592000"
+    Cache-Control = "public, max-age=0, must-revalidate"
