--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "mysql2": "^2.3.3",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "bcryptjs": "^2.4.3"
   }
 }
